[package]
name = "code-extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
owo-colors = "3.5.0"
prettyplease = "0.1.19"
syn = { version = "1.0.101", features = ["full"] }
